# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
.fleet/: run.json
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: greet.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
